--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^2.5.0",
 		"prismjs": "^1.29.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-hook-form": "^7.53.1"
+		"react-hook-form": "^7.53.1",
+		"react-redux": "^9.2.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.11.1",
