--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.53.1",
-		"react-redux": "^9.2.0"
+		"react-redux": "^9.2.0",
+		"redux-persist": "^6.0.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.11.1",
