--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.11.1",
-		"@types/react": "^18.3.10",
-		"@types/react-dom": "^18.3.0",
+		"@types/prismjs": "^1.26.5",
+		"@types/react": "^18.3.18",
+		"@types/react-dom": "^18.3.5",
 		"@vitejs/plugin-react": "^4.3.2",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.11.1",
@@ -37,6 +38,7 @@
 		"prettier": "^3.4.2",
 		"prettier-plugin-tailwindcss": "^0.6.9",
 		"tailwindcss": "^3.4.14",
+		"typescript": "^5.7.3",
 		"vite": "^5.4.8"
 	}
 }
